Modified area occupied by grid in smaller-screen sized devices

--- a/Complete Intro to Web Development/css/Project-2/style.css
+++ b/Complete Intro to Web Development/css/Project-2/style.css
@@ -19,7 +19,7 @@
     grid-template-areas:
       "order payment"
       "total total";
-    grid-template-columns: 1fr 1fr;;
+    grid-template-columns: 1fr 1fr;
   }
   
   .main-nav {
@@ -185,3 +185,12 @@
     transition: 1s ease-in;
 }
 
+@media (max-width:400px){
+  .page{
+    grid-template-areas:
+    "order"
+    "payment"
+    "total";
+    grid-template-columns: 1fr;
+  }
+}
