--- a/Complete Intro to Web Development/css/Project-2/style.css
+++ b/Complete Intro to Web Development/css/Project-2/style.css
@@ -41,7 +41,7 @@
   .box {
     background-color: #eee1d5;
     border-radius: 5px;
-    box-shadow: -2px -3px 2px 1px inset red, 2px 3px 3px 1px inset blue;
+    box-shadow: -2px -3px 7px 1px inset rgb(154, 10, 10), 2px 3px 7px 1px inset rgb(129, 88, 120);
     padding: 15px;
     margin-bottom: 20px;
     width: 100%;
