--- a/Complete Intro to Web Development/final-project/style.css
+++ b/Complete Intro to Web Development/final-project/style.css
@@ -49,13 +49,15 @@ body{
     color: white;
 }
 .wrong {
-    background-color: #888;
-    color: white; 
+    background-color: rgb(255, 0, 0);
+    color: rgb(255, 255, 255); 
 }
 .invalid {
     animation: flash 1s;
+    border-radius: 1px solid red;
 }
-  /* flashes red border and then fades back to gray */
+   /* flashes red border and then fades back to gray */
+  
 @keyframes flash {
     5% {
     border-color: crimson;
@@ -68,14 +70,14 @@ body{
     font-size: 40px;
     animation: spin 1.5s linear infinite;
 }
-  /* rotates clockwise indefinitely */
+   /* rotates clockwise indefinitely  */
 @keyframes spin {
     to {
     transform: rotate(360deg);
     }
 }
-/* visibility hidden means the item is still there and taking up space
-     but just not shown. display: none doesn't take up space */
+ /* visibility hidden means the item is still there and taking up space
+     but just not shown. display: none doesn't take up space  */
 .hidden {
     visibility: hidden;
 }
@@ -84,7 +86,7 @@ body{
     align-items: center;
     justify-content: center;
 }
-  /* winner animation */
+  /* winner animation  */
 @keyframes rainbow {
     100%,
     0% {
